[project]
name = "mcp-neo4j-http-proxy"
version = "0.1.0"
description = "HTTP Proxy for Neo4j MCP Memory Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.6.0",
    "uvicorn>=0.30.0",
    "neo4j>=5.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-neo4j-http-proxy = "mcp_neo4j_http_proxy:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
] 